--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -1,8 +1,9 @@
 ---
 title: Syllabus Template # add course title here 
 format:
- pdf:  default # delete this line if you don't want a pdf version rendered via LaTeX
  html: default
+ pdf: default # delete this line if you don't want a pdf version rendered via LaTeX
+# docx: default
 execute:
   engine: knitr # enables inline R code
 ---
