--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -98,11 +98,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 #	 📚 Required Books
 
-- 
+- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+
 
 ## <i class="bi bi-bookshelf"></i> Additional Books 
 
-- 
+- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
 # ℹ Resources 
 
