--- a/slides/ghpages.qmd
+++ b/slides/ghpages.qmd
@@ -12,8 +12,10 @@ format:
    title-slide-attributes:
     data-background-opacity: "0.2" # <-- background opacity of title slide
 smaller: true # <-- text size toggle 
-footer: "👈 Click on Block M for menue. Click [here](index) to return to the website."
+footer: "👈 Click on Block M for menu. Click [here](index) to return to the website."
 ---
 
 
 {{< include ../README.md >}}
+
+- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
