--- a/slides/day1.qmd
+++ b/slides/day1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Day 1"
 subtitle: ""
-date: today
+date: ""
 image: "https://umaec.umich.edu/wp-content/uploads/2013/10/030630_fordpreferred.jpg" # <-- image to be used in links to slides
 image-alt: Weill Hall # <- alt text for accessibility
 format:
